# multiprocessing-func-runner

./: .gitignore  README.md  pyproject.toml
multiprocessing_func_runner/: __init__.py  _utils.py  main.py
tests/: conftest.py  test_run.py  test_run_chunks.py
