[tool.poetry]
name = "multiprocessing_func_runner"
version = "0.1.0"
description = "Helper for running functions in multiprocessing"
authors = ["xgmsx <github.com/xgmsx>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
